--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start:dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js ",
     "install": "cd client && npm install && npm run build && cd .."
   },
