--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "http-proxy-middleware": "^0.18.0",
-    "nodemailer": "^4.6.7"
+    "nodemailer": "^4.6.7",
+    "react-image-gallery": "^0.8.11",
+    "react-player": "^1.6.6"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
